fix: improve the animation and the dark mode definition for the .prose class

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,3 +3,10 @@
 @import 'tailwindcss/components';
 /* purgecss end ignore */
 @import 'tailwindcss/utilities';
+
+
+.dark-mode {
+  .dark\:prose-dark-mode {
+    @extend .prose-dark;
+  }
+}
